Modified facts model, adding DAOs and rules to basics of Genome Properties. Validated unit tests for required by and sufficient for rules.  No support yet for Genome Property thresholds.
git-svn-id: http://svn.jcvi.org/ANNOTATION/RulesBasedAnnotation/trunk@31745 061605af-e407-0410-a945-9c8a22772c06